--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,17 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Contact — LearnHub</title>
-<meta name="description" content="Contact LearnHub for course inquiries and partnerships."/>
-<link rel="canonical" href="https://example.com/contact.html" />
+<!doctype html><html lang='en'><head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#0f172a">
+<!-- Tailwind CDN -->
 <script src="https://cdn.tailwindcss.com"></script>
+<!-- AOS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<!-- Firebase (placeholder - replace config) -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<!-- GA4 placeholder -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-XXXXXXXXXX');</script>
-</head>
-<body class="bg-slate-50 text-slate-800">
-<header class="bg-white shadow"><div class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between"><a href='/' class='flex items-center gap-3'><img src='/assets/logo.png' class='w-10 h-10'/><span class='font-bold'>LearnHub</span></a><nav class='hidden md:block space-x-4'><a href='/' class='text-slate-700'>Home</a><a href='/courses.html' class='text-slate-700'>Courses</a><a href='/about.html' class='text-slate-700'>About</a><a href='/contact.html' class='text-slate-900 font-semibold'>Contact</a></nav></div></header>
-<main class='max-w-3xl mx-auto px-4 py-12'>
-  <h1 class='text-3xl font-bold mb-4' data-aos='fade-up'>Get in touch</h1>
-  <p class='text-slate-600 mb-6'>Have a question or want to enroll? Fill the form below.</p>
-
-  <!-- Simple form that posts to Formspree (replace ACTION with your form endpoint) -->
-  <form id="contactForm" action="https://formspree.io/f/your_form_id" method="POST" class="bg-white p-6 rounded shadow grid gap-4">
-    <label class="block"><span class="text-sm font-medium">Name</span><input name="name" required class="mt-1 block w-full rounded border-slate-200 shadow-sm"></label>
-    <label class="block"><span class="text-sm font-medium">Email</span><input type="email" name="email" required class="mt-1 block w-full rounded border-slate-200 shadow-sm"></label>
-    <label class="block"><span class="text-sm font-medium">Message</span><textarea name="message" rows="4" required class="mt-1 block w-full rounded border-slate-200 shadow-sm"></textarea></label>
-    <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded">Send Message</button>
-    <p class="text-sm text-slate-500">Or email us at <a href="mailto:hello@example.com" class="text-indigo-600">hello@example.com</a></p>
-  </form>
-
-</main>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script><script>AOS.init({once:true,duration:700});</script>
-</body></html>
+<title>Contact — LearnHub</title></head><body class='bg-slate-50 text-slate-800'><main class='max-w-3xl mx-auto p-6'><h1>Contact</h1><form action='https://formspree.io/f/your_form_id' method='POST' class='grid gap-4 bg-white p-6 rounded shadow'><input name='name' placeholder='Name' required class='p-2 border'/><input name='email' placeholder='Email' type='email' required class='p-2 border'/><textarea name='message' rows='4' class='p-2 border'></textarea><button class='bg-indigo-600 text-white px-4 py-2 rounded'>Send</button></form></main></body></html>
