--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Terms — LearnHub</title><meta name="description" content="Terms and conditions."/><script src="https://cdn.tailwindcss.com"></script></head><body class="bg-slate-50 text-slate-800"><div class="max-w-4xl mx-auto px-4 py-12"><h1 class="text-2xl font-bold">Terms & Conditions</h1><p class="mt-4 text-slate-600">This is a sample terms page. Replace with your legal text.</p></div></body></html>
+<!doctype html><html lang='en'><head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#0f172a">
+<!-- Tailwind CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
+<!-- AOS -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<!-- Firebase (placeholder - replace config) -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<!-- GA4 placeholder -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-XXXXXXXXXX');</script>
+<title>Terms</title></head><body class='p-6 max-w-4xl mx-auto'><h1>Terms</h1><p>Sample terms.</p></body></html>
